Better support for JDK 11